--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 
         <ul id="slide-out" class="sidenav">
 
-            <li><a href="#!">Upload</a></li>
-            <li><a href="#!">Favorites</a></li>
-            <li><a href="#!">About</a></li>
+            <li><a href="index.html" id="home">Home</a></li>
+            <li><a href="upload.html" id="upload">Upload</a></li>
+            <li><a href="favorites.html" id="favorites">Favorites</a></li>
+            <li><a href="about.html" id="about">About</a></li>
 
         </ul>
 
