--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <html>
         <head>    
-            <link href="https://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Open+Sans:700|Roboto+Condensed" rel="stylesheet">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/js/materialize.min.js"></script>
            
