--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </head>
         </head>
     <body>
-
+        
         <ul id="slide-out" class="sidenav">
 
             <li><a href="index.html" id="home">Home</a></li>
@@ -28,7 +28,7 @@
             <li><a href="about.html" id="about">About</a></li>
 
         </ul>
-
+<a href="#" id="login">LOGIN  <i class="tiny material-icons">arrow_forward</i></a>
         <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         
         <script src="jquery-3.3.1.min.js"></script>
@@ -38,10 +38,12 @@
   <!-- Dropdown Structure -->
         <div class="row">
             <div class="col md6" id="mood">
-                <h1>MOOD</h1>
+                <h1><p>MOOD</p></h1>
+                <p id="slogan1">LETTING YOU HEAR</p>
             </div>
             <div class="col md6" id="music">
-                <h2 class="music">MUSIC</h2>
+                <h2 class="music"><p>MUSIC</p></h2>
+                <p id="slogan2">WHAT YOU'RE FEELING</p>
             </div>
         </div>
 
