--- a/favorites.html
+++ b/favorites.html
@@ -18,7 +18,7 @@
 
             </head>
         </head>
-    <body>
+    <body id="favorites-body">
 
         <ul id="slide-out" class="sidenav">
 
