--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             </head>
         </head>
-    <body>
+    <body id="index">
         
         <ul id="slide-out" class="sidenav">
 
@@ -28,7 +28,7 @@
             <li><a href="about.html" id="about">About</a></li>
 
         </ul>
-<a href="#" id="login">LOGIN  <i class="tiny material-icons">arrow_forward</i></a>
+<a href="#" id="login">LOGIN  <i class="small material-icons">trending_flat</i></a>
         <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         
         <script src="jquery-3.3.1.min.js"></script>
