--- a/upload.html
+++ b/upload.html
@@ -53,6 +53,10 @@
 
             </div>
 
+            <div class="row">
+                <!--Gif and Spotify playlist will be displayed here, code pending-->
+            </div>
+
         </div>
 
         <div class="container" id="upload-space">
@@ -69,6 +73,22 @@
 
                 <div class="col md12">
                     <p>Choose a photo or take one below then click ANALYZE to create a playlist.</p>
+                </div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col md12">
+
+                    <p>
+                        
+                        <video onclick="snapshot(this);" width=500 height=500 id="video" controls autoplay></video>
+                        <br>
+                        <canvas  id="myCanvas" width="500" height="500"></canvas>
+                    
+                    </p>
+
                 </div>
 
             </div>
