begin media queries

--- a/upload.html
+++ b/upload.html
@@ -72,7 +72,7 @@
             <div class="row">
 
                 <div class="col md12">
-                    <p>Choose a photo or take one below then click ANALYZE to create a playlist.</p>
+                    <p>Choose a photo or take one below then click <a class="waves-effect waves-light btn-small">ANALYZE</a> to create a playlist.</p>
                 </div>
 
             </div>
@@ -92,6 +92,7 @@
                 </div>
 
             </div>
+
 
         </div>
         
