--- a/upload.html
+++ b/upload.html
@@ -35,6 +35,7 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
         
+        <!--This contains code for the results window (right side of page)-->
         <div class="container" id="results">
            
             <div class="row">
@@ -59,6 +60,7 @@
 
         </div>
 
+        <!--This contains code for the image upload container, coded second because of the float-->
         <div class="container" id="upload-space">
 
             <div class="row">
@@ -77,6 +79,7 @@
 
             </div>
 
+            <!--This row contains the canvas for uploading the image.-->
             <div class="row">
 
                 <div class="col md12">
