--- a/upload.html
+++ b/upload.html
@@ -16,6 +16,8 @@
                 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
                 <link href="assets/css/style.css" rel="stylesheet">
 
+                <!----------------Firebase-------------------------->
+                <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
             </head>
         </head>
     <body id="upload-body">
@@ -26,6 +28,7 @@
             <li><a href="upload.html" id="upload">Upload</a></li>
             <li><a href="favorites.html" id="favorites">Favorites</a></li>
             <li><a href="about.html" id="about">About</a></li>
+            <li><a id="logout">Log out</a></li>
 
         </ul>
 
