Updated css and style changes

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <a id="Final" href="#!" class="modal-close waves-effect waves-green btn-flat">Final</a>
                         </form>
                     </div>
-                </div>
+                </div> <!-- Modal -->
 
         </div>
         
