--- a/favorites.html
+++ b/favorites.html
@@ -43,7 +43,7 @@
         <!--Title page display-->
         <div class="row">
             <div id="favorites-gradient" class="col m6">
-
+                    <i class="material-icons">favorite</i>
             </div>
             <div class="col m6">
 
@@ -68,6 +68,80 @@
 
             </div>
 
+            <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <button class="btn-floating btn-large waves-effect waves-light red close" id="close">X</button>
+                        <h3>Log in to your Account!</h3>
+                        <div id="form" class="row">
+                            <form class="col s12">
+                              <div class="row">
+                                <div class="input-field col s12">
+                                  <input id="email" type="email" class="validate">
+                                  <label for="email">Email</label>
+                                </div>
+                              </div>
+                              <div id="signup"class="row">
+                                <div class="input-field col s12">
+                                  <input id="password" type="password" class="validate">
+                                  <label for="password">Password</label>
+                                </div>
+                              </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <a id="CreateAccount" href="#!" class="modal-close waves-effect waves-green btn-flat">Sign Up</a>
+                        <a id="log" href="#!" class="modal-close waves-effect waves-green btn-flat">Log in</a>
+                    </div>
+                </div>
+                <div id="modal2" class="modal">
+                    <div class="modal-content">
+                       <button class="btn-floating btn-large waves-effect waves-light red close" id="close">X</button>
+                        <h3>Create your Account!</h3>
+                        <div id="form" class="row">
+                            <form class="col s12">
+                                    <div class="row">
+                                        <div class="input-field col s12">
+                                            <input id="NewEmail" type="email" class="validate">
+                                            <label for="email">Email</label>
+                                        </div>
+                                    </div>
+                                    <div id="signup"class="row">
+                                        <div class="input-field col s12">
+                                            <input id="passwordNew" type="password" class="validate">
+                                            <label for="password">Password</label>
+                                        </div>
+                                    </div>
+                                    <a id="AccountCreate" href="#!" class="modal-close waves-effect waves-green btn-flat">Continue</a>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div id="modal3" class="modal">
+                    <div class="modal-content">
+                            <button class="btn-floating btn-large waves-effect waves-light red close" id="close">X</button>
+                        <h3>Finish creating your account</h3>
+                        <form class="col s12">
+                            <div class="row">
+                                <div class="input-field col s6">
+                                    <input placeholder="John" id="first_name" type="text" class="validate">
+                                    <label for="first_name">First Name</label>
+                                </div>
+                                <div class="input-field col s6">
+                                    <input placeholder="Smith" id="last_name" type="text" class="validate">
+                                    <label for="last_name">Last Name</label>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input id="NewUsername" type="text" class="validate">
+                                    <label for="username">Username</label>
+                                </div>
+                            </div>
+                            <a id="Final" href="#!" class="modal-close waves-effect waves-green btn-flat">Final</a>
+                        </form>
+                    </div>
+                </div> <!-- Modal -->
 
         </div>
         
