--- a/favorites.html
+++ b/favorites.html
@@ -56,6 +56,7 @@
                           <tr>
                             <th>Gif</th>
                             <th>Playlist</th>
+                            <th><i class="material-icons">delete</i></th>
                           </tr>
                         </thead>
                         <tbody id="playlistsrow">
@@ -140,7 +141,7 @@
                 </div> <!-- Modal -->
 
         </div>
-        <!---------------------------------------Firebase Call-------------------------------------->
+        <!--Firebase Call-->
         <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
     
     </body>
