--- a/upload.html
+++ b/upload.html
@@ -98,6 +98,7 @@
 
             <div class="row">
                 <div class="col md12" id="genre-select">
+                    
                     <div class="input-field" id="genre">
                         <select>
                             <option value="" disabled selected>Please Select One</option>
@@ -109,6 +110,7 @@
                         </select>
                         <label>Choose A Genre for Your Playlist:</label>
                     </div>
+                    <a id="surpriseBtn" class="waves-effect waves-light btn-large" >Surprise Me!</a>
                 </div>
             </div>
 
