responsive changes added to all but fav page

--- a/favorites.html
+++ b/favorites.html
@@ -41,8 +41,8 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <a id="CreateAccount" href="#!" class="modal-close waves-effect waves-green btn-flat">Sign Up</a>
-                        <a id="log" href="#!" class="modal-close waves-effect waves-green btn-flat">Log in</a>
+                        <a id="CreateAccount" href="#!" class="modal-close waves-effect waves-light btn">Sign Up</a>
+                        <a id="log" href="#!" class="modal-close waves-effect waves-light btn">Log in</a>
                     </div>
                 </div>
                 <div id="modal2" class="modal">
@@ -63,7 +63,7 @@
                                             <label for="password">Password</label>
                                         </div>
                                     </div>
-                                    <a id="AccountCreate" href="#!" class="modal-close waves-effect waves-green btn-flat">Continue</a>
+                                    <a id="AccountCreate" href="#!" class="modal-close waves-effect waves-light btn">Continue</a>
                             </form>
                         </div>
                     </div>
@@ -89,10 +89,10 @@
                                     <label for="username">Username</label>
                                 </div>
                             </div>
-                            <a id="Final" href="#!" class="modal-close waves-effect waves-green btn-flat">Final</a>
+                            <a id="Final" href="#!" class="modal-close waves-effect waves-light btn">Final</a>
                         </form>
                     </div>
-                </div> <!-- Modal -->       
+                </div> <!-- Modal -->      
         <!--Sidenav code-->
         <ul id="slide-out" class="sidenav">
 
