finalized responsive design

--- a/favorites.html
+++ b/favorites.html
@@ -112,21 +112,17 @@
 
         <!--Title page display-->
         <div class="row">
-            <div id="favorites-gradient" class="col m6">
-                    <i class="material-icons">favorite</i>
-            </div>
-            <div class="col m6">
+            <div class="col s8 offset-s2 m6 offset-m2">
 
 
-                <h3 class="favorites"><p>Favorites</p></h3>
+                <div id="favorites-header"><p><i class="material-icons">favorite</i>Favorites</p></div>
                 <div id"favorites-slogan"><p>Listen again and again.</p></div>
-               
-
+                <hr>
                 <table id="favorites-table">
                         <thead>
                           <tr>
-                            <th>Gif</th>
-                            <th>Playlist</th>
+                            <th><i class="material-icons">mood</i> Gif</th>
+                            <th><i class="material-icons">play_circle_outline</i>Playlist</th>
                             <th><i class="material-icons">delete</i></th>
                           </tr>
                         </thead>
